--- a/src/app/views/admin/login.html
+++ b/src/app/views/admin/login.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="styles/admin/style.css">
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <div class="logo">
+            <h2>Clube Robotica</h2>
+        </div><!--logo-->
+    </header>
+
     <form method="post">
-        <input type="text" name="user" autocomplete="off">
-        <input type="password" name="password">
+        <h2>Sing in</h2>
+        <input type="text" name="user" autocomplete="off" placeholder="User">
+        <input type="password" name="password" placeholder="Password">
         <input type="submit" value="Login">
     </form>
+
 </body>
 </html>
